added wireframe directory and uploaded first wireframe png for this project

--- a/Projects/Project_One/Golf_Card_Game/index.html
+++ b/Projects/Project_One/Golf_Card_Game/index.html
@@ -7,8 +7,8 @@
     integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
     crossorigin="anonymous"></script>
 
-    <script src="app.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <script src="golf.js/app.js"></script>
+    <link rel="stylesheet" href="golf.css/style.css">
     <title></title>
   </head>
   <body>
