--- a/Projects/Project_One/Golf_Card_Game/index.html
+++ b/Projects/Project_One/Golf_Card_Game/index.html
@@ -9,9 +9,22 @@
 
     <script src="golf.js/app.js"></script>
     <link rel="stylesheet" href="golf.css/style.css">
-    <title></title>
+    <title>Golf Card Game</title>
   </head>
   <body>
+    <header>Golf</header>
+    <h1>An online card game for 2 players</h1>
+    <div id="startGame">Start Game</div>
+    <div id="playerOneBoard"></div>
+    <div id="playerTwoBoard"></div>
 
-  </body>
+    </div>
+
+
+
+
+
+
+
+</body>
 </html>
