--- a/Projects/Project_One/Golf_Card_Game/index.html
+++ b/Projects/Project_One/Golf_Card_Game/index.html
@@ -14,7 +14,10 @@
   <body>
     <header>Golf</header>
     <h1>An online card game for 2 players</h1>
-    <div id="startGame">Start Game</div>
+    <button id="startGame">Start Game</button>
+    <button id="shuffle">Shuffle</button>
+    <button id="draw">Draw</button>
+
     <div id="playerOneBoard"></div>
     <div id="playerTwoBoard"></div>
 
