player one receives random card values

--- a/Projects/Project_One/Golf_Card_Game/index.html
+++ b/Projects/Project_One/Golf_Card_Game/index.html
@@ -13,13 +13,14 @@
   </head>
   <body>
     <header>Golf</header>
-    <h1>An online card game for 2 players</h1>
-    <button id="startGame">Start Game</button>
-    <button id="shuffle">Shuffle</button>
-    <button id="draw">Draw</button>
+    <div class="cardContainer">
+        <h1>An online card game for 2 players</h1>
+        <button id="startGame">Start Game</button>
+        <button id="shuffle">Shuffle</button>
+        <button id="draw">Draw</button>
 
-    <div id="playerOneBoard"></div>
-    <div id="playerTwoBoard"></div>
+        <div id="playerOneBoard"></div>
+        <div id="playerTwoBoard"></div>
 
     </div>
 
