Nines Alive game created - game logic to flesh out partially still

--- a/Projects/Project_One/Golf_Card_Game/index.html
+++ b/Projects/Project_One/Golf_Card_Game/index.html
@@ -1,18 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script
     src="https://code.jquery.com/jquery-3.2.1.min.js"
     integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
     crossorigin="anonymous"></script>
 
+    
+  <style>
+    #draggable { width: 100px; height: 100px; padding: 0.5em; float: left; margin: 10px 10px 10px 0; }
+    #droppable { width: 150px; height: 150px; padding: 0.5em; float: left; margin: 10px; }
+    </style>
+
     <script src="golf.js/app.js"></script>
     <link rel="stylesheet" href="golf.css/style.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <script>
+  $( function() {
+  $( "#draggable" ).draggable();
+  $( "#droppable" ).droppable({
+    drop: function( event, ui ) {
+      $( this )
+        .addClass( "ui-state-highlight" )
+        .find( "p" )
+          .html( "Dropped!" );
+    }
+  });
+} );
+  </script>
     <title>Golf Card Game</title>
   </head>
   <body>
     <header>Golf</header>
+
+    <div id="draggable" class="ui-widget-content">
+            <p>Drag me to my target</p>
+    </div>
+
+    <div id="droppable" class="ui-widget-header">
+            <p>Drop here</p>
 
         <h1>An online card game for 2 players</h1>
         <button id="startGame">Start Game</button>
@@ -24,6 +53,7 @@
         <div id="playerTwoBoard"></div>
 
 
+        </div>
 
 
 
