when click on numbers they impact score negatively or positively

--- a/Projects/Project_One/Nines_Alive/index.html
+++ b/Projects/Project_One/Nines_Alive/index.html
@@ -12,28 +12,20 @@
 
     <title>Nines Alive!</title>
   </head>
-  <body>
-        <header>
+<body>
+  <header>
+    <div>
+      <h1>Scoreboard: 0</h1>
+      <span id="timer">Timer: 30s</span>
+      <span id="round">Round: 1</span>
+      <button id="startGame">Start Game</button>
+    </div>
 
-                <div class="playerOne">
-                  <h1>Scoreboard: 0</h1>
-                </div>
+  </header>
 
-                <div class="playerTwo">
-                  <h1>Scoreboard: 0</h1>
-                </div>
+  <div class="squares">
 
-                <div class="stats">
-                  <span id="timer">Timer: 30s</span>
-                  <span id="round">Round: 1</span>
-                  <button>Begin</button>
-                </div>
-
-        </header>
-
-        <div class="squaresPlayerOne"></div>
-
-        <div class="squaresPlayerTwo"></div>
+  </div>
 
   <script src="js_app/nines.js"></script>
   </body>
