adding game start end and lives functionality

--- a/Projects/Project_One/hilow_card_game/index.html
+++ b/Projects/Project_One/hilow_card_game/index.html
@@ -10,6 +10,26 @@
     <script src="js_dir/app.js"></script>
     <link rel="stylesheet" href="css_dir/style.css">
     <title>Hi Lo Card Game</title>
+    <style media="screen">
+      #start{
+        margin-top:20px;
+      }
+      #highLow{
+        dipslay:none;
+      }
+      .icard{
+        padding: 10px;
+        border: 1px solid black;
+      }
+      #cards{
+        margin-top: 20px;
+        height: 60px;
+      }
+    </style>
+
+
+
+
   </head>
   <body>
 
@@ -21,7 +41,11 @@
       <div id="start">
         <button id="btnstart" type="button"  class="btn">Start Game</button>
       </div>
-
+      <div id="score>"</div>
+      <div id="cards"></div>
+      <div id="highLow">
+            <button id="btnhigh" type="button"  class="btn">High</button>
+            <button id="btnlow" type="button"  class="btn">Low</button>
   </body>
 </html>
 
