--- a/Projects/Project_One/hilow_card_game/index.html
+++ b/Projects/Project_One/hilow_card_game/index.html
@@ -13,28 +13,154 @@
     <style>
 
       body{
-        background-color: yellow;
+        /*background-color: yellow;*/
+        width: 100%;
+        margin: 0 auto;
+        position: relative;
       }
+
       h1{
         color: red;
+        background-color: black;
+        height: 115px;
+        width: 100%;
+        margin: 0 auto;
+        position: absolute;
+        text-align: center;
+        padding-top: 65px;
+        top: 0;
 
       }
-      #start{
-        margin-top:20px;
+
+    .container {
+        /*top-padding: 300px;
+        top: 300px;*/
+        margin: 0 auto;
+        width: 100%;
+        height: 100%
+        position: relative;
+        flex-wrap: wrap;
+        /*display: run-in;*/
+
+
+    }
+
+    #message {
+        height: 110px;
+        width: 100%;
+        margin-top: 175px;
+        background-color: red;
+        font-weight: bolder;
+        font-size: 28px;
+        margin-right: 0;
+        padding-top: 10px;
+        padding-right: 0px;
+        text-align: center;
+        position: absolute;
+
+
+}
+#highLow {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+
+
+}
+
+button#btnstart.btn {
+        position: relative;
+        /*align-items: center;
+        align-self: center;*/
+        display:inline-block;
+        margin-top: 300px;
+        padding: 10px 25px;
+        text-align: center;
+        height: 50px;
+        width: 130px;
+        margin-left: 45%;
+        background-color: yellow;
+        border-radius: 10px;
+        border: 3px solid black;
       }
+
+button#btnlow.btn {
+        position: absolute;
+        /*align-items: center;
+        align-self: center;*/
+        display: inline-block;
+        margin-top: 200px;
+        padding: 10px 25px;
+        text-align: center;
+        height: 50px;
+        width: 130px;
+        margin-left: 65%;
+        background-color: yellow;
+        border-radius: 10px;
+        justify-content: center;
+        border: 3px solid black;
+
+        }
+
+button#btnhigh.btn {
+        position: absolute;
+        /*align-items: center;
+        align-self: center;*/
+        display: inline-block;
+        margin-top: 200px;
+        padding: 10px 25px 12px 25px;
+        text-align: center;
+        height: 50px;
+        width: 130px;
+        margin-left: 35%;
+        background-color: rgba(255, 0, 0, 0.51);
+        border-radius: 10px;
+        justify-content: center;
+        border: 3px solid rgba(0, 0, 0, 0.57);
+        font-size: 24px;
+        font-weight: bolder;
+
+        }
+
+
       #highLow{
         /*display:none;*/
         display: none;
       }
-      .icard{
-        padding: 10px;
-        border: 1px solid black;
+
+      span.icard{
+        height: 125px;
+        width: 100px;
+        padding: 1.75em .75em;
+        /*padding-bottom: 2em;*/
+        margin-top: 0px;
+        margin-left: 30px;
+        margin-right: 30px;
+        border: 5px solid rgba(95, 20, 20, 0.45);
+
+        text-align: center;
+        justify-content: space-around;
+        font-size: 35px;
+        background-color: white;
+        flex-flow: row;
+        border-radius: .25em;
+        z-index: 2;
+        border-style: outset;
+        /*align-content: center;*/
+
+
       }
+
       #cards{
-        height: 100%;
-        width: 100%;
-        margin-top: 30px;
-        height: 90px;
+        /*margin-top: 310px;*/
+        height: 600x;
+        width: 600px;
+        padding-top: 450px;
+        top: 400px;
+        flex-wrap: wrap;
 
       }
     </style>
@@ -48,7 +174,7 @@
     <div class="container">
       <h1>High vs Low Game</h1>
       <div id="message">Rules: Select either Hi or Low for the next card.  Guess the value of the down facing card versus the up facing card.  Place your bet depending on how confident you are about your choice of hi or low on the next card.</div>
-    </div>
+
 
       <div id="start">
         <button id="btnstart" type="button"  class="btn">Start Game</button>
@@ -59,6 +185,7 @@
             <button id="btnhigh" type="button"  class="btn">High</button><br>
             <button id="btnlow" type="button"  class="btn">Low</button>
           </div>
+      </div>
   </body>
 
   <script>
