--- a/Projects/Project_One/hilow_card_game/index.html
+++ b/Projects/Project_One/hilow_card_game/index.html
@@ -17,7 +17,7 @@
 
     <div class="container">
       <h1>High vs Low Game</h1>
-      <div id="message">Rules: Select either Hi or Low for the next card.  Guess the value of the down facing card versus the up facing card.  You start with 3 lives.  Guess incorrectly 3 times and it's game over.  How high can you go?</div>
+      <div id="message">Rules: Select either Hi or Low for the next card.  Guess the value of the down facing card versus the up facing card.  You start with 3 lives.  Guess incorrectly 3 times and it's game over.  Score 5 points & you win!  How high can you go?</div>
 
 
       <div id="start">
