updated game logic and functionality for hilo

--- a/Projects/Project_One/hilow_card_game/index.html
+++ b/Projects/Project_One/hilow_card_game/index.html
@@ -2,12 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script
-    src="https://code.jquery.com/jquery-3.2.1.min.js"
-    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    crossorigin="anonymous"></script>
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 
     <script src="js_dir/app.js"></script>
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css">
+
     <link rel="stylesheet" href="css_dir/style.css">
     <title>Hi Lo Card Game</title>
 
@@ -15,25 +18,36 @@
   </head>
   <body>
 
-    <div class="container">
-      <h1>High vs Low Game</h1>
-      <div id="message">Rules: Select either Hi or Low for the next card.  Guess the value of the down facing card versus the up facing card.  You start with 3 lives.  Guess incorrectly 3 times and it's game over.  Score 5 points & you win!  How high can you go?</div>
+    <div class="container pt-5">
+      <div class="row">
+        <div class="col-lg-5 jumbotron text-center" style="background-color:#A2C0CD">
 
+              <h1>High vs Low</h1><br>
+              <div id="messageHL">Rules: Select either Hi or Low for the next card.  Guess the value of the down facing card versus the up facing card.  You start with 3 lives.  Guess incorrectly 3 times and it's game over.  Score 5 points & you win!  How high can you go?</div>
+              <br>
 
-      <div id="start">
-        <button id="btnstart" type="button"  class="btn">Start Game</button>
-      </div>
-      <div id="score>"</div>
-      <div id="cards"></div>
-      <div id="highLow">
-            <button id="btnhigh" type="button"  class="btn">High</button><br>
-            <button id="btnlow" type="button"  class="btn">Low</button>
+              <div id="start">
+                <button id="btnstart" type="button"  class="btn">Start Game</button>
+              </div>
+        </div>
+
+              <div id="score"></div>
+
+      <div class="col-lg-7">
+          <div id="highLow" class="pt-3 pb-3 mx-auto btn-block">
+            <button id="btnhigh" type="button"  class="btn btn-outline-danger btn-lg btn-block">High</button><br>
+            <button id="btnlow" type="button"  class="btn btn-outline-danger btn-lg btn-block">Low</button>
           </div>
+
+
+      <div id="cards" class="pb-3 mx-auto"></div>
+
       </div>
+
+      <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+
+
   </body>
-
-
 </html>
-
-
-<!-- onclick="gameStart()" -->
